# swatches

./: AUTHORS  CMakeLists.txt  LICENSE.md  README.md  README_zh.md  swatches64.sketch
data/: com.github.keyilan.swatches.appdata.xml  com.github.keyilan.swatches.desktop  com.github.keyilan.swatches.gschema.xml
debian/: changelog  control  copyright
po/: com.github.keyilan.swatches.pot  en.po  en_CA.po  en_US.po  es.po  ko.po  lt.po  swatches.pot  zh_CN.po  zh_HK.po  zh_SG.po  zh_TW.po
src/: Application.vala  MainWindow.vala  Stylesheet.vala
